<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/m"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".ui.addEdit.AddEditFragment">

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:hint="@string/title"
            android:autofillHints="Name"
            android:inputType="text"
            android:background="@drawable/rounded_edit_text_bg"/>

        <EditText
            android:id="@+id/etDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:hint="@string/description"
            android:autofillHints="Name"
            android:inputType="text"
            android:background="@drawable/rounded_edit_text_bg"/>

        <EditText
            android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:hint="@string/location"
            android:autofillHints="Name"
            android:inputType="text"
            android:background="@drawable/rounded_edit_text_bg"/>

        <EditText
            android:id="@+id/etTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:hint="@string/tags_hint"
            android:autofillHints="Name"
            android:inputType="text"
            android:background="@drawable/rounded_edit_text_bg"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:text="@string/submit"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/xxxs"
            android:elevation="@dimen/xs"
            android:backgroundTint="@color/material_dynamic_tertiary80" />

    </LinearLayout>
</layout>